# overview-rs

./: Cargo.toml  example.py  flake.nix  lib.rs  pyproject.toml  shell.nix
examples/: example.py
protocols/: hyprland-toplevel-export-v1.xml
src/: lib.rs  main.rs
src/overview_rs/: helpers.rs  mod.rs
src/toplevel_streamer_lib/: helpers.rs  hyprland_toplevel_export.rs  mod.rs
