[package]
name = "hyprland_overview_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "hyprland_overview_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
libc = "0.2.177"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
pyo3-stub-gen = "0.17"
wayland-backend = "0.3.11"
wayland-client = "0.31.11"
wayland-scanner = "0.31.7"
